genera los archivos de traduccion para las etiquetas de cada pagina

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,112 @@
     "Dark": "Dark",
     "System": "System",
     "Language": "Language",
-    "Log out": "Log out"
+    "Log out": "Log out",
+    "Master Administrator Dashboard": "Master Administrator Dashboard",
+    "Welcome to the Tlacualli general control panel.": "Welcome to the Tlacualli general control panel.",
+    "Registered Restaurants": "Registered Restaurants",
+    "Admin Master Users": "Admin Master Users",
+    "Administrator Users": "Administrator Users",
+    "Collaborator Users": "Collaborator Users",
+    "Monthly Accesses": "Monthly Accesses",
+    "Actions per restaurant": "Actions per restaurant",
+    "Restaurants": "Restaurants",
+    "Master Users": "Master Users",
+    "Register Restaurant": "Register Restaurant",
+    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
+    "Back": "Back",
+    "Restaurant Information": "Restaurant Information",
+    "Restaurant Name": "Restaurant Name",
+    "Ex: Tacos El Sol": "Ex: Tacos El Sol",
+    "Social Reason": "Social Reason",
+    "Ex: Tacos El Sol S.A. de C.V.": "Ex: Tacos El Sol S.A. de C.V.",
+    "Style": "Style",
+    "Select a style": "Select a style",
+    "Italian": "Italian",
+    "Land and Sea": "Land and Sea",
+    "Meats": "Meats",
+    "Seafood": "Seafood",
+    "Mexican": "Mexican",
+    "Japanese": "Japanese",
+    "Other": "Other",
+    "Address": "Address",
+    "Ex: Av. Principal 123, Colonia Centro": "Ex: Av. Principal 123, Colonia Centro",
+    "Municipality or Mayoralty": "Municipality or Mayoralty",
+    "Ex: Cuauhtémoc": "Ex: Cuauhtémoc",
+    "State": "State",
+    "Select a state": "Select a state",
+    "Contact Information (Administrator)": "Contact Information (Administrator)",
+    "Phone (will be the password)": "Phone (will be the password)",
+    "Phone": "Phone",
+    "Minimum 6 digits": "Minimum 6 digits",
+    "Email (will be the user)": "Email (will be the user)",
+    "Email": "Email",
+    "Ex: admin@tacoselsol.com": "Ex: admin@tacoselsol.com",
+    "RFC": "RFC",
+    "Ex: SOLT850101XXX": "Ex: SOLT850101XXX",
+    "Save Changes": "Save Changes",
+    "Registering...": "Registering...",
+    "Saving...": "Saving...",
+    "Search by name...": "Search by name...",
+    "Filters": "Filters",
+    "Filter by State": "Filter by State",
+    "Filter by Style": "Filter by Style",
+    "Register New Restaurant": "Register New Restaurant",
+    "Edit Restaurant": "Edit Restaurant",
+    "Modify the restaurant information.": "Modify the restaurant information.",
+    "Name": "Name",
+    "Municipality/Mayoralty": "Municipality/Mayoralty",
+    "Actions": "Actions",
+    "Loading restaurants...": "Loading restaurants...",
+    "Open menu": "Open menu",
+    "Edit": "Edit",
+    "Delete": "Delete",
+    "Are you sure?": "Are you sure?",
+    "This action will mark the restaurant as inactive. Do you want to continue?": "This action will mark the restaurant as inactive. Do you want to continue?",
+    "Cancel": "Cancel",
+    "Yes, delete": "Yes, delete",
+    "No restaurants found.": "No restaurants found.",
+    "Restaurant Details": "Restaurant Details",
+    "Username": "Username",
+    "Registration Date": "Registration Date",
+    "Loading users...": "Loading users...",
+    "No master users found.": "No master users found.",
+    "Search by name or email...": "Search by name or email...",
+    "Register New Master User": "Register New Master User",
+    "Edit Master User": "Edit Master User",
+    "Register Master User": "Register Master User",
+    "Modify the user's information.": "Modify the user's information.",
+    "Add a new master user to the system.": "Add a new master user to the system.",
+    "Name(s)": "Name(s)",
+    "Ex: Juan": "Ex: Juan",
+    "Last Name(s)": "Last Name(s)",
+    "Ex: Pérez García": "Ex: Pérez García",
+    "Administrator Dashboard": "Administrator Dashboard",
+    "Manage your restaurant's operations.": "Manage your restaurant's operations.",
+    "Welcome, Administrator!": "Welcome, Administrator!",
+    "Here you can manage your menu, employees, and view reports for your restaurant.": "Here you can manage your menu, employees, and view reports for your restaurant.",
+    "View and update your restaurant details.": "View and update your restaurant details.",
+    "Edit Information": "Edit Information",
+    "Update your restaurant's details. Click save when you're done.": "Update your restaurant's details. Click save when you're done.",
+    "No restaurant associated with this account.": "No restaurant associated with this account.",
+    "Client Dashboard": "Client Dashboard",
+    "Your personal space.": "Your personal space.",
+    "Welcome!": "Welcome!",
+    "View your order history, manage your payment methods, and update your profile.": "View your order history, manage your payment methods, and update your profile.",
+    "View My Orders": "View My Orders",
+    "Collaborator Dashboard": "Collaborator Dashboard",
+    "Access your daily tasks and information.": "Access your daily tasks and information.",
+    "Welcome, Collaborator!": "Welcome, Collaborator!",
+    "View your assigned orders, tables, and other tasks for the day.": "View your assigned orders, tables, and other tasks for the day.",
+    "Login": "Login",
+    "Username (email)": "Username (email)",
+    "Password": "Password",
+    "Show password": "Show password",
+    "Hide password": "Hide password",
+    "Remember my username": "Remember my username",
+    "Forgot your password?": "Forgot your password?",
+    "LOGIN": "LOGIN",
+    "Administrator": "Administrator",
+    "English": "English",
+    "Spanish": "Español"
 }
