--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -6,5 +6,113 @@
     "Dark": "Oscuro",
     "System": "Sistema",
     "Language": "Idioma",
-    "Log out": "Cerrar Sesión"
+    "Log out": "Cerrar Sesión",
+    "Master Administrator Dashboard": "Dashboard Administrador Master",
+    "Welcome to the Tlacualli general control panel.": "Bienvenido al panel de control general de Tlacualli.",
+    "Registered Restaurants": "Restaurantes registrados",
+    "Admin Master Users": "Usuarios Admin Master",
+    "Administrator Users": "Usuarios administradores",
+    "Collaborator Users": "Usuarios colaboradores",
+    "Monthly Accesses": "Accesos mensuales",
+    "Actions per restaurant": "Acciones por restaurante",
+    "Restaurants": "Restaurantes",
+    "Master Users": "Usuarios Master",
+    "Register Restaurant": "Registrar Restaurante",
+    "Add a new restaurant and its administrator to the system.": "Añada un nuevo restaurante y su administrador al sistema.",
+    "Back": "Volver",
+    "Restaurant Information": "Información del Restaurante",
+    "Restaurant Name": "Nombre del Restaurante",
+    "Ex: Tacos El Sol": "Ej: Tacos El Sol",
+    "Social Reason": "Razón Social",
+    "Ex: Tacos El Sol S.A. de C.V.": "Ej: Tacos El Sol S.A. de C.V.",
+    "Style": "Estilo",
+    "Select a style": "Seleccione un estilo",
+    "Italian": "Italiano",
+    "Land and Sea": "Mar y tierra",
+    "Meats": "Carnes",
+    "Seafood": "Mariscos",
+    "Mexican": "Mexicano",
+    "Japanese": "Japonés",
+    "Other": "Otro",
+    "Address": "Dirección",
+    "Ex: Av. Principal 123, Colonia Centro": "Ej: Av. Principal 123, Colonia Centro",
+    "Municipality or Mayoralty": "Municipio o Alcaldía",
+    "Ex: Cuauhtémoc": "Ej: Cuauhtémoc",
+    "State": "Estado",
+    "Select a state": "Seleccione un estado",
+    "Contact Information (Administrator)": "Información de Contacto (Administrador)",
+    "Phone (will be the password)": "Teléfono (será la contraseña)",
+    "Phone": "Teléfono",
+    "Minimum 6 digits": "Mínimo 6 dígitos",
+    "Email (will be the user)": "Correo Electrónico (será el usuario)",
+    "Email": "Correo Electrónico",
+    "Ex: admin@tacoselsol.com": "Ej: admin@tacoselsol.com",
+    "RFC": "RFC",
+    "Ex: SOLT850101XXX": "Ej: SOLT850101XXX",
+    "Save Changes": "Guardar Cambios",
+    "Registering...": "Registrando...",
+    "Saving...": "Guardando...",
+    "Search by name...": "Buscar por nombre...",
+    "Filters": "Filtros",
+    "Filter by State": "Filtrar por Estado",
+    "Filter by Style": "Filtrar por Estilo",
+    "Register New Restaurant": "Registrar Nuevo Restaurante",
+    "Edit Restaurant": "Editar Restaurante",
+    "Modify the restaurant information.": "Modifique la información del restaurante.",
+    "Name": "Nombre",
+    "Municipality/Mayoralty": "Municipio/Alcaldía",
+    "Actions": "Acciones",
+    "Loading restaurants...": "Cargando restaurantes...",
+    "Open menu": "Abrir menú",
+    "Edit": "Editar",
+    "Delete": "Eliminar",
+    "Are you sure?": "¿Está seguro?",
+    "This action will mark the restaurant as inactive. Do you want to continue?": "Esta acción marcará al restaurante como inactivo. ¿Desea continuar?",
+    "Cancel": "Cancelar",
+    "Yes, delete": "Sí, eliminar",
+    "No restaurants found.": "No se encontraron restaurantes.",
+    "Restaurant Details": "Detalles del Restaurante",
+    "Username": "Nombre de Usuario",
+    "Registration Date": "Fecha de Registro",
+    "Loading users...": "Cargando usuarios...",
+    "No master users found.": "No se encontraron usuarios master.",
+    "Search by name or email...": "Buscar por nombre o correo...",
+    "Register New Master User": "Registrar Nuevo Usuario Master",
+    "Edit Master User": "Editar Usuario Master",
+    "Register Master User": "Registrar Usuario Master",
+    "Modify the user's information.": "Modifique la información del usuario.",
+    "Add a new master user to the system.": "Añada un nuevo usuario master al sistema.",
+    "Name(s)": "Nombre(s)",
+    "Ex: Juan": "Ej: Juan",
+    "Last Name(s)": "Apellidos",
+    "Ex: Pérez García": "Ej: Pérez García",
+    "Administrator Dashboard": "Dashboard Administrador",
+    "Manage your restaurant's operations.": "Gestione las operaciones de su restaurante.",
+    "Welcome, Administrator!": "¡Bienvenido, Administrador!",
+    "Here you can manage your menu, employees, and view reports for your restaurant.": "Aquí puede gestionar su menú, empleados y ver informes de su restaurante.",
+    "View and update your restaurant details.": "Vea y actualice los detalles de su restaurante.",
+    "Edit Information": "Editar Información",
+    "Update your restaurant's details. Click save when you're done.": "Actualice los detalles de su restaurante. Haga clic en guardar cuando haya terminado.",
+    "No restaurant associated with this account.": "No hay ningún restaurante asociado a esta cuenta.",
+    "Client Dashboard": "Dashboard Cliente",
+    "Your personal space.": "Tu espacio personal.",
+    "Welcome!": "¡Bienvenido!",
+    "View your order history, manage your payment methods, and update your profile.": "Vea su historial de pedidos, gestione sus métodos de pago y actualice su perfil.",
+    "View My Orders": "Ver Mis Pedidos",
+    "Collaborator Dashboard": "Dashboard Colaborador",
+    "Access your daily tasks and information.": "Acceda a sus tareas e información diarias.",
+    "Welcome, Collaborator!": "¡Bienvenido, Colaborador!",
+    "View your assigned orders, tables, and other tasks for the day.": "Vea sus pedidos, mesas y otras tareas asignadas para el día.",
+    "Login": "Iniciar Sesión",
+    "Username (email)": "Usuario (email)",
+    "Password": "Contraseña",
+    "Show password": "Mostrar contraseña",
+    "Hide password": "Ocultar contraseña",
+    "Remember my username": "Recordar mi usuario",
+    "Forgot your password?": "¿Olvidaste tu contraseña?",
+    "LOGIN": "INICIAR SESIÓN",
+    "Administrator": "Administrador",
+
+    "English": "English",
+    "Spanish": "Español"
 }
