--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,118 +1,163 @@
 {
-    "Dashboard": "Dashboard",
-    "My Account": "Mi Cuenta",
-    "Theme": "Tema",
-    "Light": "Claro",
-    "Dark": "Oscuro",
-    "System": "Sistema",
-    "Language": "Idioma",
-    "Log out": "Cerrar Sesión",
-    "Master Administrator Dashboard": "Dashboard Administrador Master",
-    "Welcome to the Tlacualli general control panel.": "Bienvenido al panel de control general de Tlacualli.",
-    "Registered Restaurants": "Restaurantes registrados",
-    "Admin Master Users": "Usuarios Admin Master",
-    "Administrator Users": "Usuarios administradores",
-    "Collaborator Users": "Usuarios colaboradores",
-    "Monthly Accesses": "Accesos mensuales",
-    "Actions per restaurant": "Acciones por restaurante",
-    "Restaurants": "Restaurantes",
-    "Master Users": "Usuarios Master",
-    "Register Restaurant": "Registrar Restaurante",
-    "Add a new restaurant and its administrator to the system.": "Añada un nuevo restaurante y su administrador al sistema.",
-    "Back": "Volver",
-    "Restaurant Information": "Información del Restaurante",
-    "Restaurant Name": "Nombre del Restaurante",
-    "Ex: Tacos El Sol": "Ej: Tacos El Sol",
-    "Social Reason": "Razón Social",
-    "Ex: Tacos El Sol S.A. de C.V.": "Ej: Tacos El Sol S.A. de C.V.",
-    "Style": "Estilo",
-    "Select a style": "Seleccione un estilo",
-    "Italian": "Italiano",
-    "Land and Sea": "Mar y tierra",
-    "Meats": "Carnes",
-    "Seafood": "Mariscos",
-    "Mexican": "Mexicano",
-    "Japanese": "Japonés",
-    "Other": "Otro",
-    "Address": "Dirección",
-    "Ex: Av. Principal 123, Colonia Centro": "Ej: Av. Principal 123, Colonia Centro",
-    "Municipality or Mayoralty": "Municipio o Alcaldía",
-    "Ex: Cuauhtémoc": "Ej: Cuauhtémoc",
-    "State": "Estado",
-    "Select a state": "Seleccione un estado",
-    "Contact Information (Administrator)": "Información de Contacto (Administrador)",
-    "Phone (will be the password)": "Teléfono (será la contraseña)",
-    "Phone": "Teléfono",
-    "Minimum 6 digits": "Mínimo 6 dígitos",
-    "Email (will be the user)": "Correo Electrónico (será el usuario)",
-    "Email": "Correo Electrónico",
-    "Ex: admin@tacoselsol.com": "Ej: admin@tacoselsol.com",
-    "RFC": "RFC",
-    "Ex: SOLT850101XXX": "Ej: SOLT850101XXX",
-    "Save Changes": "Guardar Cambios",
-    "Registering...": "Registrando...",
-    "Saving...": "Guardando...",
-    "Search by name...": "Buscar por nombre...",
-    "Filters": "Filtros",
-    "Filter by State": "Filtrar por Estado",
-    "Filter by Style": "Filtrar por Estilo",
-    "Register New Restaurant": "Registrar Nuevo Restaurante",
-    "Edit Restaurant": "Editar Restaurante",
-    "Modify the restaurant information.": "Modifique la información del restaurante.",
-    "Name": "Nombre",
-    "Municipality/Mayoralty": "Municipio/Alcaldía",
-    "Actions": "Acciones",
-    "Loading restaurants...": "Cargando restaurantes...",
-    "Open menu": "Abrir menú",
-    "Edit": "Editar",
-    "Delete": "Eliminar",
-    "Are you sure?": "¿Está seguro?",
-    "This action will mark the restaurant as inactive. Do you want to continue?": "Esta acción marcará al restaurante como inactivo. ¿Desea continuar?",
-    "Cancel": "Cancelar",
-    "Yes, delete": "Sí, eliminar",
-    "No restaurants found.": "No se encontraron restaurantes.",
-    "Restaurant Details": "Detalles del Restaurante",
-    "Username": "Nombre de Usuario",
-    "Registration Date": "Fecha de Registro",
-    "Loading users...": "Cargando usuarios...",
-    "No master users found.": "No se encontraron usuarios master.",
-    "Search by name or email...": "Buscar por nombre o correo...",
-    "Register New Master User": "Registrar Nuevo Usuario Master",
-    "Edit Master User": "Editar Usuario Master",
-    "Register Master User": "Registrar Usuario Master",
-    "Modify the user's information.": "Modifique la información del usuario.",
-    "Add a new master user to the system.": "Añada un nuevo usuario master al sistema.",
-    "Name(s)": "Nombre(s)",
-    "Ex: Juan": "Ej: Juan",
-    "Last Name(s)": "Apellidos",
-    "Ex: Pérez García": "Ej: Pérez García",
-    "Administrator Dashboard": "Dashboard Administrador",
-    "Manage your restaurant's operations.": "Gestione las operaciones de su restaurante.",
-    "Welcome, Administrator!": "¡Bienvenido, Administrador!",
-    "Here you can manage your menu, employees, and view reports for your restaurant.": "Aquí puede gestionar su menú, empleados y ver informes de su restaurante.",
-    "View and update your restaurant details.": "Vea y actualice los detalles de su restaurante.",
-    "Edit Information": "Editar Información",
-    "Update your restaurant's details. Click save when you're done.": "Actualice los detalles de su restaurante. Haga clic en guardar cuando haya terminado.",
-    "No restaurant associated with this account.": "No hay ningún restaurante asociado a esta cuenta.",
-    "Client Dashboard": "Dashboard Cliente",
-    "Your personal space.": "Tu espacio personal.",
-    "Welcome!": "¡Bienvenido!",
-    "View your order history, manage your payment methods, and update your profile.": "Vea su historial de pedidos, gestione sus métodos de pago y actualice su perfil.",
-    "View My Orders": "Ver Mis Pedidos",
-    "Collaborator Dashboard": "Dashboard Colaborador",
-    "Access your daily tasks and information.": "Acceda a sus tareas e información diarias.",
-    "Welcome, Collaborator!": "¡Bienvenido, Colaborador!",
-    "View your assigned orders, tables, and other tasks for the day.": "Vea sus pedidos, mesas y otras tareas asignadas para el día.",
-    "Login": "Iniciar Sesión",
-    "Username (email)": "Usuario (email)",
-    "Password": "Contraseña",
-    "Show password": "Mostrar contraseña",
-    "Hide password": "Ocultar contraseña",
-    "Remember my username": "Recordar mi usuario",
-    "Forgot your password?": "¿Olvidaste tu contraseña?",
-    "LOGIN": "INICIAR SESIÓN",
-    "Administrator": "Administrador",
-
-    "English": "English",
-    "Spanish": "Español"
+  "Administrator Dashboard": "Panel de Administrador",
+  "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
+  "Welcome, Administrator!": "¡Bienvenido, Administrador!",
+  "Here you can manage your menu, employees, and view reports for your restaurant.": "Aquí puedes gestionar tu menú, empleados y ver reportes de tu restaurante.",
+  "Restaurant Information": "Información del Restaurante",
+  "View and update your restaurant details.": "Ver y actualizar los detalles de tu restaurante.",
+  "Edit Information": "Editar Información",
+  "Edit Restaurant Information": "Editar Información del Restaurante",
+  "Update your restaurant's details. Click save when you're done.": "Actualiza los detalles de tu restaurante. Haz clic en guardar cuando termines.",
+  "Restaurant Name": "Nombre del Restaurante",
+  "Social Reason": "Razón Social",
+  "Style": "Giro",
+  "Address": "Dirección",
+  "Phone": "Teléfono",
+  "Email": "Correo Electrónico",
+  "RFC": "RFC",
+  "No restaurant associated with this account.": "No hay ningún restaurante asociado a esta cuenta.",
+  "Master Admin Dashboard": "Panel de Administrador Maestro",
+  "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
+  "Registered Restaurants": "Restaurantes Registrados",
+  "Master Admin Users": "Usuarios Admin Master",
+  "Administrator Users": "Usuarios Administradores",
+  "Collaborator Users": "Usuarios Colaboradores",
+  "Monthly Accesses": "Accesos Mensuales",
+  "Actions by Restaurant": "Acciones por Restaurante",
+  "Restaurants": "Restaurantes",
+  "Master Users": "Usuarios Master",
+  "Register Restaurant": "Registrar Restaurante",
+  "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
+  "Go Back": "Volver",
+  "Client Dashboard": "Panel de Cliente",
+  "Your personal space.": "Tu espacio personal.",
+  "Welcome!": "¡Bienvenido!",
+  "View your order history, manage your payment methods, and update your profile.": "Consulta tu historial de pedidos, gestiona tus métodos de pago y actualiza tu perfil.",
+  "View My Orders": "Ver Mis Pedidos",
+  "Collaborator Dashboard": "Panel de Colaborador",
+  "Access your daily tasks and information.": "Accede a tus tareas e información diaria.",
+  "Welcome, Collaborator!": "¡Bienvenido, Colaborador!",
+  "View your assigned orders, tables, and other tasks for the day.": "Consulta tus pedidos asignados, mesas y otras tareas del día.",
+  "User (email)": "Usuario (email)",
+  "Password": "Contraseña",
+  "Hide password": "Ocultar contraseña",
+  "Show password": "Mostrar contraseña",
+  "Remember me": "Recordarme",
+  "Forgot your password?": "Olvidaste tu contraseña",
+  "LOG IN": "INICIAR SESIÓN",
+  "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
+  "Login Successful": "Inicio de Sesión Exitoso",
+  "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
+  "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
+  "Login Failed": "Falló el inicio de sesión",
+  "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
+  "The email or password are incorrect.": "El correo o la contraseña son incorrectos.",
+  "Email required": "Email requerido",
+  "Please enter your email to reset your password.": "Por favor, ingresa tu correo para restablecer tu contraseña.",
+  "Recovery email sent": "Correo de recuperación enviado",
+  "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
+  "Error": "Error",
+  "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
+  "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo.",
+  "My Account": "Mi Cuenta",
+  "Theme": "Tema",
+  "Light": "Claro",
+  "Dark": "Oscuro",
+  "System": "Sistema",
+  "Language": "Idioma",
+  "Log out": "Cerrar sesión",
+  "Dashboard": "Panel",
+  "e.g., Tacos El Sol": "ej., Tacos El Sol",
+  "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
+  "Italiano": "Italiano",
+  "Mar y tierra": "Mar y tierra",
+  "Carnes": "Carnes",
+  "Mariscos": "Mariscos",
+  "Mexicano": "Mexicano",
+  "Japonés": "Japonés",
+  "Otro": "Otro",
+  "Select a style": "Selecciona un giro",
+  "e.g., Main St 123, Downtown": "ej., Av. Principal 123, Centro",
+  "Municipality or City": "Municipio o Ciudad",
+  "e.g., Cuauhtémoc": "ej., Cuauhtémoc",
+  "State": "Estado",
+  "Select a state": "Selecciona un estado",
+  "Contact Information": "Información de Contacto",
+  "Contact phone": "Teléfono de contacto",
+  "e.g., SOLT850101XXX": "ej., SOLT850101XXX",
+  "Saving...": "Guardando...",
+  "Save Changes": "Guardar Cambios",
+  "Update Successful": "Actualización Exitosa",
+  "The restaurant information has been updated.": "La información del restaurante ha sido actualizada.",
+  "Update Error": "Error al Actualizar",
+  "Could not save the restaurant information.": "No se pudo guardar la información del restaurante.",
+  "Accesses": "Accesos",
+  "No access data to display.": "No hay datos de acceso para mostrar.",
+  "Actions": "Acciones",
+  "No action data to display.": "No hay datos de acciones para mostrar.",
+  "Unknown": "Desconocido",
+  "ID": "ID",
+  "First Name(s)": "Nombre(s)",
+  "e.g., Juan": "ej., Juan",
+  "Last Names": "Apellidos",
+  "e.g., Pérez García": "ej., Pérez García",
+  "Phone (will be the password)": "Teléfono (será la contraseña)",
+  "Minimum 6 digits": "Mínimo 6 dígitos",
+  "e.g., user@email.com": "ej., usuario@email.com",
+  "User Updated": "Usuario Actualizado",
+  "The Master User '{{fullName}}' has been updated.": "El Usuario Master '{{fullName}}' ha sido actualizado.",
+  "Master User Registered": "Usuario Master Registrado",
+  "The Master User '{{fullName}}' has been successfully registered.": "El Usuario Master '{{fullName}}' ha sido registrado exitosamente.",
+  "An error occurred while {{action}} the user.": "Ocurrió un error al {{action}} el usuario.",
+  "updating": "actualizar",
+  "registering": "registrar",
+  "This email is already in use.": "Este correo ya está en uso.",
+  "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
+  "The email format is invalid.": "El formato del correo es inválido.",
+  "Register Master User": "Registrar Usuario Master",
+  "Search by name or email...": "Buscar por nombre o email...",
+  "Register New Master User": "Registrar Nuevo Usuario Master",
+  "Edit": "Editar",
+  "Register": "Registrar",
+  "Modify the user information.": "Modificar la información del usuario.",
+  "Add a new master user to the system.": "Añade un nuevo usuario master al sistema.",
+  "Username": "Nombre de Usuario",
+  "Registration Date": "Fecha de Registro",
+  "Not specified": "No especificado",
+  "Loading users...": "Cargando usuarios...",
+  "Open menu": "Abrir menú",
+  "Delete": "Eliminar",
+  "Are you sure?": "¿Estás seguro?",
+  "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
+  "Cancel": "Cancelar",
+  "Yes, delete": "Sí, eliminar",
+  "No master users found.": "No se encontraron usuarios master.",
+  "User Deleted": "Usuario Eliminado",
+  "The user has been marked as inactive.": "El usuario ha sido marcado como inactivo.",
+  "Could not delete the user.": "No se pudo eliminar el usuario.",
+  "Contact Information (Administrator)": "Información de Contacto (Administrador)",
+  "Minimum 6 digits": "Mínimo 6 dígitos",
+  "Email (will be the username)": "Email (será el usuario)",
+  "e.g., admin@tacoselsol.com": "ej., admin@tacoselsol.com",
+  "Registering...": "Registrando...",
+  "Register Restaurant": "Registrar Restaurante",
+  "Registration Successful": "Registro Exitoso",
+  "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
+  "Operation Error": "Error en la Operación",
+  "The email is already in use by another administrator.": "El correo ya está en uso por otro administrador.",
+  "Search by name...": "Buscar por nombre...",
+  "Filters": "Filtros",
+  "Filter by State": "Filtrar por Estado",
+  "Filter by Style": "Filtrar por Giro",
+  "Could not load restaurants.": "No se pudieron cargar los restaurantes.",
+  "Modify the restaurant information.": "Modificar la información del restaurante.",
+  "Name": "Nombre",
+  "Municipality/City": "Municipio/Ciudad",
+  "Loading restaurants...": "Cargando restaurantes...",
+  "This action will mark the restaurant as inactive. Do you want to continue?": "Esta acción marcará el restaurante como inactivo. ¿Deseas continuar?",
+  "Restaurant Deleted": "Restaurante Eliminado",
+  "The restaurant has been marked as inactive.": "El restaurante ha sido marcado como inactivo.",
+  "Could not delete the restaurant.": "No se pudo eliminar el restaurante.",
+  "No restaurants found.": "No se encontraron restaurantes."
 }
+    
