en header, en menú añade la opción de "Cambiar contraseña" y habilita la

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,11 @@
+
 {
     "Dashboard": "Dashboard",
+    "Menu": "Menu",
+    "Orders": "Orders",
+    "Tables": "Tables",
+    "Reports": "Reports",
+    "Employees": "Employees",
     "My Account": "My Account",
     "Theme": "Theme",
     "Light": "Light",
@@ -7,62 +13,32 @@
     "System": "System",
     "Language": "Language",
     "Log out": "Log out",
-    "Master Administrator Dashboard": "Master Administrator Dashboard",
-    "Welcome to the Tlacualli general control panel.": "Welcome to the Tlacualli general control panel.",
+    "Toggle navigation menu": "Toggle navigation menu",
+    "Toggle user menu": "Toggle user menu",
+    "Master Admin Dashboard": "Master Admin Dashboard",
+    "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
     "Registered Restaurants": "Registered Restaurants",
-    "Admin Master Users": "Admin Master Users",
+    "Master Admin Users": "Master Admin Users",
     "Administrator Users": "Administrator Users",
     "Collaborator Users": "Collaborator Users",
     "Monthly Accesses": "Monthly Accesses",
-    "Actions per restaurant": "Actions per restaurant",
+    "Accesses": "Accesses",
+    "No access data to display.": "No access data to display.",
+    "Actions by Restaurant": "Actions by Restaurant",
+    "Actions": "Actions",
+    "No action data to display.": "No action data to display.",
     "Restaurants": "Restaurants",
     "Master Users": "Master Users",
-    "Register Restaurant": "Register Restaurant",
-    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
-    "Back": "Back",
-    "Restaurant Information": "Restaurant Information",
-    "Restaurant Name": "Restaurant Name",
-    "Ex: Tacos El Sol": "Ex: Tacos El Sol",
-    "Social Reason": "Social Reason",
-    "Ex: Tacos El Sol S.A. de C.V.": "Ex: Tacos El Sol S.A. de C.V.",
-    "Style": "Style",
-    "Select a style": "Select a style",
-    "Italian": "Italian",
-    "Land and Sea": "Land and Sea",
-    "Meats": "Meats",
-    "Seafood": "Seafood",
-    "Mexican": "Mexican",
-    "Japanese": "Japanese",
-    "Other": "Other",
-    "Address": "Address",
-    "Ex: Av. Principal 123, Colonia Centro": "Ex: Av. Principal 123, Colonia Centro",
-    "Municipality or Mayoralty": "Municipality or Mayoralty",
-    "Ex: Cuauhtémoc": "Ex: Cuauhtémoc",
-    "State": "State",
-    "Select a state": "Select a state",
-    "Contact Information (Administrator)": "Contact Information (Administrator)",
-    "Phone (will be the password)": "Phone (will be the password)",
-    "Phone": "Phone",
-    "Minimum 6 digits": "Minimum 6 digits",
-    "Email (will be the user)": "Email (will be the user)",
-    "Email": "Email",
-    "Ex: admin@tacoselsol.com": "Ex: admin@tacoselsol.com",
-    "RFC": "RFC",
-    "Ex: SOLT850101XXX": "Ex: SOLT850101XXX",
-    "Save Changes": "Save Changes",
-    "Registering...": "Registering...",
-    "Saving...": "Saving...",
     "Search by name...": "Search by name...",
     "Filters": "Filters",
     "Filter by State": "Filter by State",
     "Filter by Style": "Filter by Style",
-    "Register New Restaurant": "Register New Restaurant",
-    "Edit Restaurant": "Edit Restaurant",
-    "Modify the restaurant information.": "Modify the restaurant information.",
-    "Name": "Name",
-    "Municipality/Mayoralty": "Municipality/Mayoralty",
-    "Actions": "Actions",
+    "Register Restaurant": "Register Restaurant",
     "Loading restaurants...": "Loading restaurants...",
+    "Name": "Name",
+    "Style": "Style",
+    "Municipality/City": "Municipality/City",
+    "State": "State",
     "Open menu": "Open menu",
     "Edit": "Edit",
     "Delete": "Delete",
@@ -71,29 +47,95 @@
     "Cancel": "Cancel",
     "Yes, delete": "Yes, delete",
     "No restaurants found.": "No restaurants found.",
-    "Restaurant Details": "Restaurant Details",
-    "Username": "Username",
-    "Registration Date": "Registration Date",
-    "Loading users...": "Loading users...",
-    "No master users found.": "No master users found.",
+    "Social Reason": "Social Reason",
+    "Address": "Address",
+    "Phone": "Phone",
+    "Email": "Email",
+    "RFC": "RFC",
+    "Restaurant Deleted": "Restaurant Deleted",
+    "The restaurant has been marked as inactive.": "The restaurant has been marked as inactive.",
+    "Error": "Error",
+    "Could not delete the restaurant.": "Could not delete the restaurant.",
+    "Could not load restaurants.": "Could not load restaurants.",
+    "Edit Restaurant": "Edit Restaurant",
+    "Modify the restaurant information.": "Modify the restaurant information.",
     "Search by name or email...": "Search by name or email...",
     "Register New Master User": "Register New Master User",
-    "Edit Master User": "Edit Master User",
-    "Register Master User": "Register Master User",
-    "Modify the user's information.": "Modify the user's information.",
+    "Register": "Register",
+    "Master User": "Master User",
+    "Modify the user information.": "Modify the user information.",
     "Add a new master user to the system.": "Add a new master user to the system.",
-    "Name(s)": "Name(s)",
-    "Ex: Juan": "Ex: Juan",
-    "Last Name(s)": "Last Name(s)",
-    "Ex: Pérez García": "Ex: Pérez García",
+    "Loading users...": "Loading users...",
+    "Username": "Username",
+    "Registration Date": "Registration Date",
+    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?",
+    "User Deleted": "User Deleted",
+    "The user has been marked as inactive.": "The user has been marked as inactive.",
+    "Could not delete the user.": "Could not delete the user.",
+    "No master users found.": "No master users found.",
+    "Not specified": "Not specified",
+    "Go Back": "Go Back",
+    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
+    "Restaurant Information": "Restaurant Information",
+    "Update Successful": "Update Successful",
+    "The information for restaurant '{{name}}' has been updated.": "The information for restaurant '{{name}}' has been updated.",
+    "Update Error": "Update Error",
+    "Could not save the restaurant information.": "Could not save the restaurant information.",
+    "Saving...": "Saving...",
+    "Save Changes": "Save Changes",
+    "e.g., Tacos El Sol": "e.g., Tacos El Sol",
+    "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
+    "Select a style": "Select a style",
+    "Italiano": "Italian",
+    "Mar y tierra": "Surf and turf",
+    "Carnes": "Meats",
+    "Mariscos": "Seafood",
+    "Mexicano": "Mexican",
+    "Japonés": "Japanese",
+    "Otro": "Other",
+    "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
+    "e.g., Cuauhtémoc": "e.g., Cuauhtémoc",
+    "Select a state": "Select a state",
+    "Contact Information (Administrator)": "Contact Information (Administrator)",
+    "Phone (will be the password)": "Phone (will be the password)",
+    "Minimum 6 digits": "Minimum 6 digits",
+    "Email (will be the username)": "Email (will be the username)",
+    "e.g., admin@tacoselsol.com": "e.g., admin@tacoselsol.com",
+    "e.g., SOLT850101XXX": "e.g., SOLT850101XXX",
+    "Registering...": "Registering...",
+    "Registration Successful": "Registration Successful",
+    "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
+    "Operation Error": "Operation Error",
+    "An error occurred during the operation.": "An error occurred during the operation.",
+    "The email is already in use by another administrator.": "The email is already in use by another administrator.",
+    "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
+    "The email format is invalid.": "The email format is invalid.",
     "Administrator Dashboard": "Administrator Dashboard",
     "Manage your restaurant's operations.": "Manage your restaurant's operations.",
     "Welcome, Administrator!": "Welcome, Administrator!",
     "Here you can manage your menu, employees, and view reports for your restaurant.": "Here you can manage your menu, employees, and view reports for your restaurant.",
     "View and update your restaurant details.": "View and update your restaurant details.",
     "Edit Information": "Edit Information",
+    "Edit Restaurant Information": "Edit Restaurant Information",
     "Update your restaurant's details. Click save when you're done.": "Update your restaurant's details. Click save when you're done.",
+    "Restaurant Name": "Restaurant Name",
     "No restaurant associated with this account.": "No restaurant associated with this account.",
+    "The restaurant information has been updated.": "The restaurant information has been updated.",
+    "Email (not editable)": "Email (not editable)",
+    "First Name(s)": "First Name(s)",
+    "e.g., Juan": "e.g., Juan",
+    "Last Names": "Last Names",
+    "e.g., Pérez García": "e.g., Pérez García",
+    "e.g., user@email.com": "e.g., user@email.com",
+    "Save Changes": "Save Changes",
+    "User Updated": "User Updated",
+    "The Master User '{{fullName}}' has been updated.": "The Master User '{{fullName}}' has been updated.",
+    "Master User Registered": "Master User Registered",
+    "The Master User '{{fullName}}' has been successfully registered.": "The Master User '{{fullName}}' has been successfully registered.",
+    "An error occurred while {{action}} the user.": "An error occurred while {{action}} the user.",
+    "updating": "updating",
+    "registering": "registering",
+    "This email is already in use.": "This email is already in use.",
     "Client Dashboard": "Client Dashboard",
     "Your personal space.": "Your personal space.",
     "Welcome!": "Welcome!",
@@ -103,15 +145,34 @@
     "Access your daily tasks and information.": "Access your daily tasks and information.",
     "Welcome, Collaborator!": "Welcome, Collaborator!",
     "View your assigned orders, tables, and other tasks for the day.": "View your assigned orders, tables, and other tasks for the day.",
-    "Login": "Login",
-    "Username (email)": "Username (email)",
+    "Login Successful": "Login Successful",
+    "Welcome back, {{name}}!": "Welcome back, {{name}}!",
+    "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
+    "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
+    "Login Failed": "Login Failed",
+    "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
+    "The email or password are incorrect.": "The email or password are incorrect.",
+    "Email required": "Email required",
+    "Please enter your email to reset your password.": "Please enter your email to reset your password.",
+    "Recovery email sent": "Recovery email sent",
+    "Check your inbox to reset your password.": "Check your inbox to reset your password.",
+    "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
+    "No user found with that email address.": "No user found with that email address.",
+    "User (email)": "User (email)",
     "Password": "Password",
-    "Show password": "Show password",
     "Hide password": "Hide password",
-    "Remember my username": "Remember my username",
+    "Show password": "Show password",
+    "Remember me": "Remember me",
     "Forgot your password?": "Forgot your password?",
-    "LOGIN": "LOGIN",
-    "Administrator": "Administrator",
-    "English": "English",
-    "Spanish": "Español"
+    "LOG IN": "LOG IN",
+    "Change Password": "Change Password",
+    "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
+    "New Password": "New Password",
+    "Confirm Password": "Confirm Password",
+    "Passwords do not match.": "Passwords do not match.",
+    "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
+    "Success": "Success",
+    "Password updated successfully.": "Password updated successfully.",
+    "Error updating password": "Error updating password",
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password."
 }
