--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,153 +11,6 @@
   "Deliveries": "Deliveries",
   "Reports": "Reports",
   "Digital Map": "Digital Map",
-  "User (email)": "User (email)",
-  "Password": "Password",
-  "Remember me": "Remember me",
-  "Forgot your password?": "Forgot your password?",
-  "LOG IN": "LOG IN",
-  "Login Successful": "Login Successful",
-  "Welcome back, {{name}}!": "Welcome back, {{name}}!",
-  "Login Failed": "Login Failed",
-  "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
-  "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
-  "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
-  "The email or password are incorrect.": "The email or password are incorrect.",
-  "Email required": "Email required",
-  "Please enter your email to reset your password.": "Please enter your email to reset your password.",
-  "Recovery email sent": "Recovery email sent",
-  "Check your inbox to reset your password.": "Check your inbox to reset your password.",
-  "Error": "Error",
-  "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
-  "No user found with that email address.": "No user found with that email address.",
-  "My Account": "My Account",
-  "Theme": "Theme",
-  "Light": "Light",
-  "Dark": "Dark",
-  "System": "System",
-  "Language": "Language",
-  "Change Password": "Change Password",
-  "Log out": "Log out",
-  "Toggle navigation menu": "Toggle navigation menu",
-  "New Password": "New Password",
-  "Confirm Password": "Confirm Password",
-  "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
-  "Cancel": "Cancel",
-  "Save Changes": "Save Changes",
-  "Passwords do not match.": "Passwords do not match.",
-  "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
-  "Success": "Success",
-  "Password updated successfully.": "Password updated successfully.",
-  "Error updating password": "Error updating password",
-  "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
-  "Master Admin Dashboard": "Master Admin Dashboard",
-  "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
-  "Registered Restaurants": "Registered Restaurants",
-  "Master Admin Users": "Master Admin Users",
-  "Administrator Users": "Administrator Users",
-  "Collaborator Users": "Collaborator Users",
-  "Monthly Accesses": "Monthly Accesses",
-  "Accesses": "Accesses",
-  "No access data to display.": "No access data to display.",
-  "Actions by Restaurant": "Actions by Restaurant",
-  "Actions": "Actions",
-  "No action data to display.": "No action data to display.",
-  "Restaurants": "Restaurants",
-  "Master Users": "Master Users",
-  "Search by name or email...": "Search by name or email...",
-  "Register New Master User": "Register New Master User",
-  "Edit": "Edit",
-  "Register": "Register",
-  "Master User": "Master User",
-  "Modify the user information.": "Modify the user information.",
-  "Add a new master user to the system.": "Add a new master user to the system.",
-  "First Name(s)": "First Name(s)",
-  "e.g., Juan": "e.g., John",
-  "Last Names": "Last Names",
-  "e.g., Pérez García": "e.g., Smith",
-  "Phone": "Phone",
-  "Phone (will be the password)": "Phone (will be the password)",
-  "Minimum 6 digits": "Minimum 6 digits",
-  "Email": "Email",
-  "e.g., user@email.com": "e.g., user@email.com",
-  "Save Changes": "Save Changes",
-  "User Updated": "User Updated",
-  "The Master User '{{fullName}}' has been updated.": "The Master User '{{fullName}}' has been updated.",
-  "Master User Registered": "Master User Registered",
-  "The Master User '{{fullName}}' has been successfully registered.": "The Master User '{{fullName}}' has been successfully registered.",
-  "An error occurred while {{action}} the user.": "An error occurred while {{action}} the user.",
-  "updating": "updating",
-  "registering": "registering",
-  "This email is already in use.": "This email is already in use.",
-  "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
-  "The email format is invalid.": "The email format is invalid.",
-  "Username": "Username",
-  "Registration Date": "Registration Date",
-  "Actions": "Actions",
-  "Loading users...": "Loading users...",
-  "Open menu": "Open menu",
-  "Delete": "Delete",
-  "Are you sure?": "Are you sure?",
-  "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?",
-  "Yes, delete": "Yes, delete",
-  "User Deleted": "User Deleted",
-  "The user has been marked as inactive.": "The user has been marked as inactive.",
-  "Could not delete the user.": "Could not delete the user.",
-  "No master users found.": "No master users found.",
-  "Search by name...": "Search by name...",
-  "Filters": "Filters",
-  "Filter by State": "Filter by State",
-  "Filter by Style": "Filter by Style",
-  "Register Restaurant": "Register Restaurant",
-  "Edit Restaurant": "Edit Restaurant",
-  "Modify the restaurant information.": "Modify the restaurant information.",
-  "Loading restaurants...": "Loading restaurants...",
-  "Name": "Name",
-  "Style": "Style",
-  "Municipality/City": "Municipality/City",
-  "State": "State",
-  "This action will mark the restaurant as inactive. Do you want to continue?": "This action will mark the restaurant as inactive. Do you want to continue?",
-  "Restaurant Deleted": "Restaurant Deleted",
-  "The restaurant has been marked as inactive.": "The restaurant has been marked as inactive.",
-  "Could not delete the restaurant.": "Could not delete the restaurant.",
-  "No restaurants found.": "No restaurants found.",
-  "Social Reason": "Social Reason",
-  "Address": "Address",
-  "RFC": "RFC",
-  "Go Back": "Go Back",
-  "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
-  "Restaurant Information": "Restaurant Information",
-  "Restaurant Name": "Restaurant Name",
-  "e.g., Tacos El Sol": "e.g., The Sun Tacos",
-  "e.g., Tacos El Sol S.A. de C.V.": "e.g., The Sun Tacos LLC",
-  "Select a style": "Select a style",
-  "Italiano": "Italian",
-  "Mar y tierra": "Surf and Turf",
-  "Carnes": "Steakhouse",
-  "Mariscos": "Seafood",
-  "Mexicano": "Mexican",
-  "Japonés": "Japanese",
-  "Otro": "Other",
-  "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
-  "e.g., Cuauhtémoc": "e.g., Brooklyn",
-  "Select a state": "Select a state",
-  "Contact Information (Administrator)": "Contact Information (Administrator)",
-  "Phone (will be the password)": "Phone (will be the password)",
-  "Email (will be the username)": "Email (will be the username)",
-  "e.g., admin@tacoselsol.com": "e.g., admin@thesuntacos.com",
-  "e.g., SOLT850101XXX": "e.g., ABC123456XYZ",
-  "Saving...": "Saving...",
-  "Registering...": "Registering...",
-  "Update Successful": "Update Successful",
-  "The information for restaurant '{{name}}' has been updated.": "The information for restaurant '{{name}}' has been updated.",
-  "Registration Successful": "Registration Successful",
-  "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
-  "Operation Error": "Operation Error",
-  "An error occurred during the operation.": "An error occurred during the operation.",
-  "The email is already in use by another administrator.": "The email is already in use by another administrator.",
-  "Could not load restaurants.": "Could not load restaurants.",
-  "ID": "ID",
-  "Unknown": "Unknown",
   "Inventory Management": "Inventory Management",
   "Manage your stock, suppliers, and movements.": "Manage your stock, suppliers, and movements.",
   "Inventory Value": "Inventory Value",
@@ -168,26 +21,45 @@
   "Suppliers": "Suppliers",
   "Movements": "Movements",
   "Loading...": "Loading...",
-  "Search by name or category...": "Search by name or category...",
   "Add New Item": "Add New Item",
   "Edit Item": "Edit Item",
   "Modify the item details.": "Modify the item details.",
   "Add a new item to your inventory.": "Add a new item to your inventory.",
-  "Register Movement": "Register Movement",
+  "Search by name or category...": "Search by name or category...",
+  "Name": "Name",
   "Category": "Category",
   "Current Stock": "Current Stock",
   "Min. Stock": "Min. Stock",
   "Unit": "Unit",
+  "Actions": "Actions",
+  "Open menu": "Open menu",
   "Register Entry": "Register Entry",
   "Register Exit": "Register Exit",
+  "Edit": "Edit",
+  "Delete": "Delete",
+  "Are you sure?": "Are you sure?",
   "This action cannot be undone. This will permanently delete the item.": "This action cannot be undone. This will permanently delete the item.",
-  "Item Deleted": "Item Deleted",
-  "The item has been removed from inventory.": "The item has been removed from inventory.",
-  "Could not delete the item.": "Could not delete the item.",
+  "Cancel": "Cancel",
+  "Yes, delete": "Yes, delete",
   "No inventory items found.": "No inventory items found.",
   "Item Name": "Item Name",
   "e.g., Tomato": "e.g., Tomato",
   "Select a category": "Select a category",
+  "Select a unit": "Select a unit",
+  "Average Cost (Unit)": "Average Cost (Unit)",
+  "Main Supplier": "Main Supplier",
+  "Select a supplier": "Select a supplier",
+  "Save Item": "Save Item",
+  "Update Successful": "Update Successful",
+  "The item has been updated.": "The item has been updated.",
+  "Item Added": "Item Added",
+  "The new item has been added to inventory.": "The new item has been added to inventory.",
+  "Save Error": "Save Error",
+  "Could not save the item information.": "Could not save the item information.",
+  "Item Deleted": "Item Deleted",
+  "The item has been removed from inventory.": "The item has been removed from inventory.",
+  "Error": "Error",
+  "Could not delete the item.": "Could not delete the item.",
   "Meats": "Meats",
   "Vegetables": "Vegetables",
   "Fruits": "Fruits",
@@ -195,44 +67,125 @@
   "Pantry": "Pantry",
   "Beverages": "Beverages",
   "Cleaning": "Cleaning",
-  "Unit of Measure": "Unit of Measure",
-  "Select a unit": "Select a unit",
-  "Average Cost (Unit)": "Average Cost (Unit)",
-  "Main Supplier": "Main Supplier",
-  "Select a supplier": "Select a supplier",
-  "Save Item": "Save Item",
-  "The item has been updated.": "The item has been updated.",
-  "Item Added": "Item Added",
-  "The new item has been added to inventory.": "The new item has been added to inventory.",
-  "Save Error": "Save Error",
-  "Could not save the item information.": "Could not save the item information.",
-  "Invalid Quantity": "Invalid Quantity",
-  "Quantity must be greater than zero.": "Quantity must be greater than zero.",
-  "Quantity": "Quantity",
-  "Total Cost": "Total Cost",
-  "Save Movement": "Save Movement",
-  "Movement Registered": "Movement Registered",
-  "The inventory has been updated.": "The inventory has been updated.",
-  "Could not register the movement.": "Could not register the movement.",
+  "Other": "Other",
   "Add New Supplier": "Add New Supplier",
   "Edit Supplier": "Edit Supplier",
   "Modify the supplier details.": "Modify the supplier details.",
   "Add a new supplier.": "Add a new supplier.",
+  "Search by name...": "Search by name...",
   "Contact": "Contact",
+  "Phone": "Phone",
+  "Email": "Email",
   "This will permanently delete the supplier. Associated items will not be deleted but will lose their main supplier link.": "This will permanently delete the supplier. Associated items will not be deleted but will lose their main supplier link.",
-  "Supplier Deleted": "Supplier Deleted",
-  "The supplier has been removed.": "The supplier has been removed.",
-  "Could not delete the supplier.": "Could not delete the supplier.",
   "No suppliers found.": "No suppliers found.",
   "Supplier Name": "Supplier Name",
-  "e.g., Central de Abastos": "e.g., Wholesale Market",
+  "e.g., Central de Abastos": "e.g., Central de Abastos",
   "Contact Name": "Contact Name",
-  "e.g., Juan Robles": "e.g., John Doe",
+  "e.g., Juan Robles": "e.g., Juan Robles",
+  "Address": "Address",
   "Payment Terms": "Payment Terms",
   "e.g., Net 30": "e.g., Net 30",
   "Save Supplier": "Save Supplier",
   "The supplier has been updated.": "The supplier has been updated.",
   "Supplier Added": "Supplier Added",
   "The new supplier has been added.": "The new supplier has been added.",
-  "Could not save the supplier information.": "Could not save the supplier information."
+  "Could not save the supplier information.": "Could not save the supplier information.",
+  "Supplier Deleted": "Supplier Deleted",
+  "The supplier has been removed.": "The supplier has been removed.",
+  "Could not delete the supplier.": "Could not delete the supplier.",
+  "Date": "Date",
+  "Item": "Item",
+  "Type": "Type",
+  "Quantity": "Quantity",
+  "Previous Stock": "Previous Stock",
+  "New Stock": "New Stock",
+  "User": "User",
+  "No movements found.": "No movements found.",
+  "Search by item name...": "Search by item name...",
+  "Entry": "Entry",
+  "Exit": "Exit",
+  "Adjustment": "Adjustment",
+  "Invalid Quantity": "Invalid Quantity",
+  "Quantity must be greater than zero.": "Quantity must be greater than zero.",
+  "Movement Registered": "Movement Registered",
+  "The inventory has been updated.": "The inventory has been updated.",
+  "Could not register the movement.": "Could not register the movement.",
+  "Total Cost": "Total Cost",
+  "Save Movement": "Save Movement",
+  "Register Movement": "Register Movement",
+  "Menu and Recipe Management": "Menu and Recipe Management",
+  "Create recipes, calculate costs, and build your menu.": "Create recipes, calculate costs, and build your menu.",
+  "Create Recipe (Technical Sheet)": "Create Recipe (Technical Sheet)",
+  "Existing Recipes": "Existing Recipes",
+  "Create Menu Item": "Create Menu Item",
+  "Menu Items": "Menu Items",
+  "DISH": "DISH",
+  "RECIPE": "RECIPE",
+  "PRICE": "PRICE",
+  "No menu items found.": "No menu items found.",
+  "Dish Name": "Dish Name",
+  "e.g., Aztec Burger": "e.g., Aztec Burger",
+  "Select Recipe": "Select Recipe",
+  "Select a recipe": "Select a recipe",
+  "Sale Price ($)": "Sale Price ($)",
+  "Update Item": "Update Item",
+  "Add to Menu": "Add to Menu",
+  "The menu item has been updated.": "The menu item has been updated.",
+  "Menu Item Added": "Menu Item Added",
+  "The new item has been added to the menu.": "The new item has been added to the menu.",
+  "Could not save the menu item information.": "Could not save the menu item information.",
+  "Recipe Name": "Recipe Name",
+  "e.g., Tacos al Pastor": "e.g., Tacos al Pastor",
+  "Ingredient": "Ingredient",
+  "Select an item": "Select an item",
+  "Add Ingredient": "Add Ingredient",
+  "Update Recipe": "Update Recipe",
+  "Save Recipe": "Save Recipe",
+  "The recipe has been updated.": "The recipe has been updated.",
+  "Recipe Added": "Recipe Added",
+  "The new recipe has been added.": "The new recipe has been added.",
+  "Could not save the recipe information.": "Could not save the recipe information.",
+  "TOTAL COST": "TOTAL COST",
+  "No recipes found.": "No recipes found.",
+  "My Account": "My Account",
+  "Theme": "Theme",
+  "Light": "Light",
+  "Dark": "Dark",
+  "System": "System",
+  "Language": "Language",
+  "Change Password": "Change Password",
+  "Log out": "Log out",
+  "Toggle navigation menu": "Toggle navigation menu",
+  "Toggle user menu": "Toggle user menu",
+  "Menu": "Menu",
+  "Passwords do not match.": "Passwords do not match.",
+  "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
+  "Success": "Success",
+  "Password updated successfully.": "Password updated successfully.",
+  "Error updating password": "Error updating password",
+  "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
+  "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
+  "New Password": "New Password",
+  "Confirm Password": "Confirm Password",
+  "Save Changes": "Save Changes",
+  "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
+  "Login Successful": "Login Successful",
+  "Welcome back, {{name}}!": "Welcome back, {{name}}!",
+  "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
+  "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
+  "The email or password are incorrect.": "The email or password are incorrect.",
+  "Login Failed": "Login Failed",
+  "Email required": "Email required",
+  "Please enter your email to reset your password.": "Please enter your email to reset your password.",
+  "Recovery email sent": "Recovery email sent",
+  "Check your inbox to reset your password.": "Check your inbox to reset your password.",
+  "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
+  "No user found with that email address.": "No user found with that email address.",
+  "User (email)": "User (email)",
+  "Password": "Password",
+  "Hide password": "Hide password",
+  "Show password": "Show password",
+  "Remember me": "Remember me",
+  "Forgot your password?": "Forgot your password?",
+  "LOG IN": "LOG IN"
 }
